# Learn_Airflow_Playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TROUBLESHOOTING.md  autostart.sh  docker-compose.yaml  environment.yaml  pyproject.toml  rebuild.sh  requirements.txt  setup.sh  stop.sh  teardown.sh
.astro/: config.yaml
dags/: 01_hello_world.py  02_csv_etl.py  03_s3_sensor_example.py  04_parallel_tasks.py  example_dag.py
docker/: podman-compose.yaml  podman-compose.yml
include/assets/: admin-user.yaml
include/queries/: my_query.sql
lima/: lima-podman-config.yaml
plugins/: my_custom_operator.py
scripts/: set_env.sh  setup_airflow.sh  test_dag.sh
tests/: test_dag_import.py
