[project]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow DAGs for local development"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["dags", "tests"]
exclude = ["build", "dist", ".venv"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104"]
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --tb=short --disable-warnings"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning"
]

[tool.coverage.run]
branch = true
source = ["dags"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = "htmlcov"
